--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,13 @@
 body,
 html {
     margin: 0;
+    color: aliceblue;
 }
 
 .header {
     width: 100%;
     height: 70px;
-    background-color: rgb(108, 53, 218);
+    background-color: rgb(11, 11, 40);
     text-align: center;
     margin-top: -25px;
 }
@@ -14,7 +15,7 @@ html {
 h1 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding: 15px;
-    text-shadow: 2px 2px 4px rgb(202, 36, 138);
+    text-shadow: 2px 2px 4px rgb(38, 28, 172);
 
 }
 
@@ -31,11 +32,11 @@ h1 {
     justify-content: center;
     width: 760px;
     height: 700px;
-    background-image: linear-gradient(rgb(83, 46, 163), rgb(19, 24, 91));
+    background-image: linear-gradient(rgb(83, 46, 163), rgb(16, 23, 122));
 }
 
 .caixa {
-    background-color: rgb(108, 53, 218);
+    background-color: rgb(11, 11, 40);
     width: 400px;
     height: 500px;
     left: 170px;
@@ -55,7 +56,8 @@ h1 {
     font-size: x-large;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
-    text-shadow: 2px 2px 4px rgb(202, 36, 138);
+    text-shadow: 2px 2px 4px #2027b1;
+    ;
 }
 
 #descricao {
@@ -64,7 +66,8 @@ h1 {
 
 button {
     outline: none;
-    background-color: #dff17b;
+    color: aliceblue;
+    background-color: #2027b1;
     width: 90px;
     font-size: large;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
